# omicsmeta

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmarks/: README.md  known_answer_suite.tsv
benchmarks/truth/: GSE154243_expected_harmonized.tsv  ambiguous_phenotype_expected_harmonized.tsv  basic_expected_harmonized.tsv  biosample_expected_harmonized.tsv  immune_pbmc_expected_harmonized.tsv  mouse_liver_expected_harmonized.tsv  sra_expected_harmonized.tsv  treatment_perturbation_expected_harmonized.tsv
docs/: api.md  design.md  index.md  quickstart.md  release_readiness.md
docs/stylesheets/: extra.css
docs/tutorials/: basic_fixture.md
examples/basic/: README.md  expected_harmonized.tsv  expected_samples.tsv  expected_unmapped_summary.tsv
galaxy-omicsmeta/: .shed.yml  macros.xml  omicsmeta_harmonize.py  omicsmeta_harmonize.xml
galaxy-omicsmeta/test-data/: raw_metadata.tsv
paper/: paper.bib  paper.md
scripts/: benchmark_mapping.py
src/omicsmeta/: __init__.py  benchmark.py  cli.py
tests/: test_additional_fixtures.py  test_benchmark.py  test_cli.py  test_detector.py  test_examples.py  test_fetcher.py  test_galaxy_wrapper.py  test_harmonizer.py  test_mapper.py  test_normalizer.py  test_ontology_loader.py  test_ontology_resources.py  test_readers.py  test_real_geo_integration.py  test_validator.py
tests/fixtures/: GSE154243_soft_snippet.txt  ambiguous_phenotype_soft_snippet.txt  biosample_edge_cases.xml  biosample_snippet.xml  (+7 more)
(+15 files in other folders)
