[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omicsmeta"
dynamic = ["version"]
description = "Automated harmonization of public omics metadata"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "omicsmeta contributors" }
]
keywords = ["bioinformatics", "metadata", "ontology", "GEO", "SRA", "BioSample"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
ontology = ["pronto>=2.5"]
text2term = ["text2term"]
docs = ["mkdocs>=1.6"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
omicsmeta = "omicsmeta.cli:main"

[project.urls]
Homepage = "https://github.com/qchiujunhao/omicsmeta"
Documentation = "https://qchiujunhao.github.io/omicsmeta/"
Issues = "https://github.com/qchiujunhao/omicsmeta/issues"

[tool.hatch.version]
path = "src/omicsmeta/_version.py"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
